# skarmdelarne

./: .gitignore  Cargo.toml  deno.json  skarmdelarne.service
.github/workflows/: deploy.yml
solid/: index.html  package-lock.json  package.json  vite.config.js
solid/src/: App.jsx  api.js
solid/src/component/generic/: Loader.jsx
solid/src/context/: loader.jsx  screenshare.jsx  session.jsx
solid/src/route/: Auth.jsx  Room.jsx
solid/src/route/Room/: apiHelper.js  handleSse.js
solid/src/util/: cachedSignal.js
src/: build.ts  dd.ts  dev.ts  http.ts  main.rs  main.ts  testing.ts
src/http/: api.ts  appState.js  appState.ts  client.ts
src/http/api/: auth.ts  client.ts  sse.ts
src/http/api/auth/: helper.ts
src/http/api/client/: answer.ts  askToWatch.ts  candidate.ts  offer.ts  streaming.ts
src/web/: mod.rs  payload.rs
src/web/websocket/: handshake.rs  mod.rs  router.rs  transmit.rs  ws_transmitter_directly_in_vec.rs
src/web/websocket/broadcast/: mod.rs  v1.rs  v2.rs
svelte/: bun.lockb  package.json
svelte/src/: App.svelte  app.css
svelte/src/lib/: Socket.js  rtc.js
