[package]
name = "skarmdelarne"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
tokio = { version = "1.44.2", features = ["full"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
